// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount/> matches the snapshot 1`] = `
<CardCount__AnimationStyle>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="10"
      timeout={
        Object {
          "enter": 400,
          "exit": 400,
        }
      }
      unmountOnExit={true}
    >
      <CardCount__Dot>
        10
      </CardCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CardCount__AnimationStyle>
`;

exports[`<CartCount/> update via props  1`] = `
<CardCount__AnimationStyle>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="10"
      timeout={
        Object {
          "enter": 400,
          "exit": 400,
        }
      }
      unmountOnExit={true}
    >
      <CardCount__Dot>
        10
      </CardCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CardCount__AnimationStyle>
`;

exports[`<CartCount/> update via props  2`] = `
<CardCount__AnimationStyle>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="15"
      timeout={
        Object {
          "enter": 400,
          "exit": 400,
        }
      }
      unmountOnExit={true}
    >
      <CardCount__Dot>
        15
      </CardCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CardCount__AnimationStyle>
`;
